build: add overrides to lock esbuild to 0.15.18 for @vercel/* nested deps; regenerate lockfile (npm ci fix on Pages)

--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@vercel/node": {
+      "esbuild": "0.15.18"
+    },
+    "@vercel/gatsby-plugin-vercel-builder": {
+      "esbuild": "0.15.18"
+    }
   }
 }
