--- a/package.json
+++ b/package.json
@@ -1,36 +1,16 @@
 {
   "name": "closetcity",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "build:pages": "npx @cloudflare/next-on-pages@1 build"
   },
   "dependencies": {
-    "@cloudflare/next-on-pages": "1.13.16",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  },
-  "overrides": {
-    "@vercel/node": {
-      "esbuild": "0.15.18"
-    },
-    "@vercel/gatsby-plugin-vercel-builder": {
-      "esbuild": "0.15.18"
-    }
+    "next": "15.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
