build: use next-on-pages v1 (no subcommand) and lock version

--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
-  "name": "closetcity",
-  "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "build:pages": "npx @cloudflare/next-on-pages@1 build"
-  },
+    "build:pages": "npx @cloudflare/next-on-pages@1"
+  }
+},
   "dependencies": {
     "next": "15.5.2",
     "react": "^18.3.1",
