--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "scripts": {
     "build:pages": "npx @cloudflare/next-on-pages@1"
-  }
-},
-  "dependencies": {
-    "next": "15.5.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16"
   }
 }
