--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "build:pages": "npx @cloudflare/next-on-pages@1"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.16"
+    "@cloudflare/next-on-pages": "^1.13.16",
+    "typescript": "^5.9.2"
   }
 }
