--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.16",
+    "@tailwindcss/postcss": "^4.1.13",
+    "postcss": "^8.5.6",
     "typescript": "^5.9.2"
   }
 }
