--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,16 @@
     "moduleResolution": "bundler",
     "module": "ESNext",
     "target": "ES2022",
-    "skipLibCheck": true
-  }
+    "jsx": "preserve",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "noEmit": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
+  "exclude": ["node_modules"]
 }
