--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "build:pages": "npx @cloudflare/next-on-pages@1"
+    "vercel-build": "next build",
+    "build:pages": "npx @cloudflare/next-on-pages@1",
+    "dev": "next dev"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.16",
@@ -11,5 +13,9 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12"
   }
 }
