--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,22 +1,15 @@
-# Cloudflare Pages configuration for closet.city
 name = "closetcity"
 compatibility_date = "2024-09-17"
 compatibility_flags = ["nodejs_compat"]
+pages_build_output_dir = ".vercel/output/static"
+pages_build_output_functions_dir = "functions"
 
-# D1 Database binding
 [[d1_databases]]
 binding = "DB"
 database_name = "closet-db"
-database_id = "your-d1-database-id-here"
-
-# R2 Storage binding
+database_id = "58aa5cb8-32e5-4ee7-8b11-55edc3d261d6"
 [[r2_buckets]]
 binding = "R2"
 bucket_name = "closetcity-storage"
-
-# Environment variables (set these in Cloudflare Pages dashboard)
 [vars]
 PROMPT_VERSION = "v1"
-
-# Secrets (set these in Cloudflare Pages dashboard under Environment Variables)
-# GEMINI_API_KEY = "your-gemini-api-key-here"
