--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "scripts": {
     "vercel-build": "next build",
-    "build:pages": "npx @cloudflare/next-on-pages@1",
-    "dev": "next dev"
+    "build:pages": "opennextjs-cloudflare build",
+    "dev": "next dev",
+    "build": "next build"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.16",
+    "@opennextjs/cloudflare": "^1.8.3",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^20.19.17",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
+    "esbuild": "^0.25.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2"
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.12"
+    "framer-motion": "^11.2.12",
+    "next": "^15.5.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
