--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,15 +1,16 @@
 name = "closetcity"
-compatibility_date = "2024-09-17"
+compatibility_date = "2024-10-01"
 compatibility_flags = ["nodejs_compat"]
-pages_build_output_dir = ".vercel/output/static"
-pages_build_output_functions_dir = "functions"
+pages_build_output_dir = ".open-next/assets"
 
 [[d1_databases]]
 binding = "DB"
 database_name = "closet-db"
 database_id = "58aa5cb8-32e5-4ee7-8b11-55edc3d261d6"
+
 [[r2_buckets]]
 binding = "R2"
 bucket_name = "closetcity-storage"
+
 [vars]
 PROMPT_VERSION = "v1"
