docs(deploy): harmonize OpenNext on Cloudflare guidance (build:pages + .open-next/assets, DB/R2/JOBS)\n\nfeat(image-proxy): serve inventory from ASSETS with R2 fallback; align seeds/manifests to /api/image-proxy/\n\nchore: update deployment status with operator checklist; reseed verified locally against closetcity-db

--- a/inventory/manifest.json
+++ b/inventory/manifest.json
@@ -7,7 +7,7 @@
     "size": "L",
     "condition": "Excellent",
     "price_cents": 21500,
-    "image": "/inventory/bbc.webp"
+    "image": "/api/image-proxy/bbc.webp"
   },
   {
     "id": "g-burberry-rainbow",
