feat(deployment): implement static build approach for frontend pages
- Create scripts/build-static.js for pure static HTML generation
- Update wrangler.toml pages_build_output_dir to 'out'
- Add npm run build:static script to package.json
- Successfully deploy static HTML pages + working Cloudflare Functions APIs

✅ Frontend pages now return 200 OK
✅ APIs continue working perfectly via functions/api/*
✅ Clean separation: static pages + serverless functions

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "scripts": {
     "vercel-build": "next build",
     "build:pages": "npm run build:opennext && node scripts/write-routes.js && node scripts/patch-worker.js",
+    "build:static": "npm run build && node scripts/build-static.js",
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "build:opennext": "opennextjs-cloudflare build"
   },
   "devDependencies": {
