--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,6 +9,9 @@ mode = "off"
 [vars]
 PROMPT_VERSION = "v1"
 
+# Note: GEMINI_API_KEY should be set as a secret in Cloudflare Pages dashboard
+# or via: wrangler pages secret put GEMINI_API_KEY --project-name closetcity
+
 [[d1_databases]]
 database_id = "58aa5cb8-32e5-4ee7-8b11-55edc3d261d6"
 binding = "DB"
