feat: add Workers AI API token support and debug endpoint
- Add CLOUDFLARE_API_TOKEN check to debug endpoint
- Create model-workersai-api.ts for direct API calls to Workers AI
- This bypasses the AI binding issues and uses API token directly
- Need Account ID to complete the implementation

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -26,6 +26,9 @@ binding = "R2"
 binding = "JOBS"
 id = "fb3079a868274895b2386fcd4ad259cc"
 
+[ai]
+binding = "AI"
+
 [env.production]
 
 [env.production.placement]
